--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="prediction-section" data-match-id="iulian-kariz">
                                 <div class="prediction-option" data-option="iulian">
                                     <div class="prediction-content">
-                                        <img src="assets/debater-iulian.jpg" alt="Iulian" class="debater-image">
+                                        <img src="assets/IMG_7171.jpeg" alt="Iulian" class="debater-image">
                                         <span class="debater-name">Iulian</span>
                                         <span class="percentage">70%</span>
                                     </div>
@@ -109,7 +109,7 @@
                                 </div>
                                 <div class="prediction-option" data-option="kariz">
                                     <div class="prediction-content">
-                                        <img src="assets/debater-kariz.jpg" alt="Kariz" class="debater-image">
+                                        <img src="assets/IMG_7174.jpeg" alt="Kariz" class="debater-image">
                                         <span class="debater-name">Kariz</span>
                                         <span class="percentage">30%</span>
                                     </div>
@@ -128,7 +128,7 @@
                             <div class="prediction-section" data-match-id="ranzt-hiroo">
                                 <div class="prediction-option" data-option="ranzt">
                                     <div class="prediction-content">
-                                        <img src="assets/debater-ranzt.jpg" alt="Ranzt" class="debater-image">
+                                        <img src="assets/IMG_7175.jpeg" alt="Ranzt" class="debater-image">
                                         <span class="debater-name">Ranzt</span>
                                         <span class="percentage">55%</span>
                                     </div>
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="prediction-option" data-option="hiroo">
                                     <div class="prediction-content">
-                                        <img src="assets/debater-hiroo.jpg" alt="Hiroo" class="debater-image">
+                                        <img src="assets/IMG_7176.jpeg" alt="Hiroo" class="debater-image">
                                         <span class="debater-name">Hiroo</span>
                                         <span class="percentage">45%</span>
                                     </div>
@@ -155,7 +155,7 @@
                             <div class="prediction-section" data-match-id="adyy-aheng">
                                 <div class="prediction-option" data-option="adyy">
                                     <div class="prediction-content">
-                                        <img src="assets/debater-adyy.jpg" alt="Adyy" class="debater-image">
+                                        <img src="assets/IMG_7177.jpeg" alt="Adyy" class="debater-image">
                                         <span class="debater-name">Adyy</span>
                                         <span class="percentage">60%</span>
                                     </div>
@@ -163,7 +163,7 @@
                                 </div>
                                 <div class="prediction-option" data-option="aheng">
                                     <div class="prediction-content">
-                                        <img src="assets/debater-aheng.jpg" alt="Aheng" class="debater-image">
+                                        <img src="assets/IMG_7178.jpeg" alt="Aheng" class="debater-image">
                                         <span class="debater-name">Aheng</span>
                                         <span class="percentage">40%</span>
                                     </div>
@@ -182,7 +182,7 @@
                             <div class="prediction-section" data-match-id="aaron-hyruki">
                                 <div class="prediction-option" data-option="aaron">
                                     <div class="prediction-content">
-                                        <img src="assets/debater-aaron.jpg" alt="Aaron" class="debater-image">
+                                        <img src="assets/IMG_7180.jpeg" alt="Aaron" class="debater-image">
                                         <span class="debater-name">Aaron</span>
                                         <span class="percentage">50%</span>
                                     </div>
@@ -190,7 +190,7 @@
                                 </div>
                                 <div class="prediction-option" data-option="hyruki">
                                     <div class="prediction-content">
-                                        <img src="assets/debater-hyruki.jpg" alt="Hyruki/Death End" class="debater-image">
+                                        <img src="assets/IMG_7181.jpeg" alt="Hyruki/Death End" class="debater-image">
                                         <span class="debater-name">Hyruki/Death End</span>
                                         <span class="percentage">50%</span>
                                     </div>
