--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="event-card-large">
                 <div class="card-image-wrapper">
-                    <img src="assets/IMG_6399.png" alt="DBA Special Match" class="event-poster">
+                    <img src="assets/assets/quality_restoration_20250824134017143.png" alt="DBA Special Match" class="event-poster">
                 </div>
                 <div class="card-content-wrapper">
                     <h3 class="event-title-main">DBA SPECIAL MATCH</h3>
@@ -123,7 +123,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
+                                <span class="match-tier">Mid Tier Battle</span>
                             </div>
                             <div class="prediction-section" data-match-id="ranzt-hiroo">
                                 <div class="prediction-option" data-option="ranzt">
@@ -191,7 +191,7 @@
                                 <div class="prediction-option" data-option="hyruki">
                                     <div class="prediction-content">
                                         <img src="assets/IMG_7181.jpeg" alt="Hyruki/Death End" class="debater-image">
-                                        <span class="debater-name">Hyruki/Death End</span>
+                                        <span class="debater-name">Hyruki</span>
                                         <span class="percentage">50%</span>
                                     </div>
                                     <div class="prediction-fill" style="width: 50%;"></div>
@@ -241,20 +241,20 @@
         
         <section class="comments-section">
             <div class="section-header">
-                <h2 class="section-title">KOMENTAR</h2>
+                <h2 class="section-title">COMMENT</h2>
             </div>
             <div class="comment-form">
                 <textarea placeholder="Tulis komentar Anda di sini..." class="comment-input"></textarea>
-                <button class="comment-submit">Kirim Komentar</button>
+                <button class="comment-submit">Send Comment</button>
             </div>
             <div class="comment-list">
                 <div class="comment-item">
-                    <div class="comment-author">Penggemar_DBA</div>
-                    <div class="comment-text">Pertandingan yang sangat seru! Tidak sabar menunggu yang berikutnya.</div>
+                    <div class="comment-author">Sall_Lutung</div>
+                    <div class="comment-text">Ampuni gua william joe, masukin ke dba.</div>
                 </div>
                 <div class="comment-item">
-                    <div class="comment-author">Analisis_Debat</div>
-                    <div class="comment-text">Gaya debat Yulz sangat kuat di babak 3. Dia layak menang.</div>
+                    <div class="comment-author">Antvasima</div>
+                    <div class="comment-text">Good Job William.</div>
                 </div>
             </div>
         </section>
