--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                     <div class="comment-text">Ampuni gua william joe, masukin ke dba.</div>
                 </div>
                 <div class="comment-item">
-                    <div class="comment-author">Antvasima</div>
-                    <div class="comment-text">Good Job William.</div>
+                    <div class="comment-author">Thinzel</div>
+                    <div class="comment-text">Di penjaruy dingin euy.</div>
                 </div>
             </div>
         </section>
