--- a/index.html
+++ b/index.html
@@ -249,12 +249,18 @@
             </div>
             <div class="comment-list">
                 <div class="comment-item">
-                    <div class="comment-author">Sall_Lutung</div>
-                    <div class="comment-text">Ampuni gua william joe, masukin ke dba.</div>
+                    <div class="comment-avatar" style="background-image: url('path/to/sall_lutung_profile.png');"></div>
+                    <div class="comment-content">
+                        <div class="comment-author">Sall_Lutung</div>
+                        <div class="comment-text">Ampuni gua william joe, masukin ke dba.</div>
+                    </div>
                 </div>
                 <div class="comment-item">
-                    <div class="comment-author">Thinzel</div>
-                    <div class="comment-text">Di penjaruy dingin euy.</div>
+                    <div class="comment-avatar" style="background-image: url('path/to/thinzel_profile.png');"></div>
+                    <div class="comment-content">
+                        <div class="comment-author">Thinzel</div>
+                        <div class="comment-text">Di penjaruy dingin euy.</div>
+                    </div>
                 </div>
             </div>
         </section>
