--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <span class="match-result win">WIN YULZ</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">Mid Tier Battle</span>
+                                <span class="match-tier">Mid Tier Debate</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -96,7 +96,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
+                                <span class="match-tier">High Tier Debate</span>
                             </div>
                             <div class="prediction-section" data-match-id="iulian-kariz">
                                 <div class="prediction-option" data-option="iulian">
@@ -123,7 +123,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">Mid Tier Battle</span>
+                                <span class="match-tier">Mid Tier Debate</span>
                             </div>
                             <div class="prediction-section" data-match-id="ranzt-hiroo">
                                 <div class="prediction-option" data-option="ranzt">
@@ -150,7 +150,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Battle</span>
+                                <span class="match-tier">High Tier Debate</span>
                             </div>
                             <div class="prediction-section" data-match-id="adyy-aheng">
                                 <div class="prediction-option" data-option="adyy">
