--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <span class="match-result win">WIN YULZ</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">Mid Tier Debate</span>
+                                <span class="match-tier">Mid Tier Battle</span>
                             </div>
                         </li>
                         <li class="match-item">
@@ -96,7 +96,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Debate</span>
+                                <span class="match-tier">High Tier Battle</span>
                             </div>
                             <div class="prediction-section" data-match-id="iulian-kariz">
                                 <div class="prediction-option" data-option="iulian">
@@ -123,7 +123,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">Mid Tier Debate</span>
+                                <span class="match-tier">Mid Tier Battle</span>
                             </div>
                             <div class="prediction-section" data-match-id="ranzt-hiroo">
                                 <div class="prediction-option" data-option="ranzt">
@@ -150,7 +150,7 @@
                                 <span class="match-result pending">??</span>
                             </div>
                             <div class="match-extra-info">
-                                <span class="match-tier">High Tier Debate</span>
+                                <span class="match-tier">High Tier Battle</span>
                             </div>
                             <div class="prediction-section" data-match-id="adyy-aheng">
                                 <div class="prediction-option" data-option="adyy">
@@ -245,16 +245,22 @@
             </div>
             <div class="comment-form">
                 <textarea placeholder="Tulis komentar Anda di sini..." class="comment-input"></textarea>
-                <button class="comment-submit">Send Comment</button>
+                <button class="comment-submit" onclick="window.location.href='confirmation.html'">Send Comment</button>
             </div>
             <div class="comment-list">
                 <div class="comment-item">
-                    <div class="comment-author">Sall_Lutung</div>
-                    <div class="comment-text">Ampuni gua william joe, masukin ke dba.</div>
+                    <div class="comment-avatar" style="background-image: url('assets/profile-sall-lutung.jpg');"></div>
+                    <div class="comment-content">
+                        <div class="comment-author">Sall_Lutung</div>
+                        <div class="comment-text">Ampuni gua william joe, masukin ke dba.</div>
+                    </div>
                 </div>
                 <div class="comment-item">
-                    <div class="comment-author">Thinzel</div>
-                    <div class="comment-text">Di penjaruy dingin euy.</div>
+                    <div class="comment-avatar" style="background-image: url('assets/profile-thinzel.jpg');"></div>
+                    <div class="comment-content">
+                        <div class="comment-author">Thinzel</div>
+                        <div class="comment-text">Di penjaruy dingin euy.</div>
+                    </div>
                 </div>
             </div>
         </section>
