--- a/ranking.html
+++ b/ranking.html
@@ -57,7 +57,7 @@
                         </thead>
                         <tbody>
                             <tr class="champion">
-                                <td>WORLD CHAMPION</td>
+                                <td>KING DIVISION</td>
                                 <td><a href="debaters.html">Lianx</a></td>
                                 <td>1-0</td>
                             </tr>
@@ -132,7 +132,7 @@
                         </thead>
                         <tbody>
                             <tr class="champion">
-                                <td>WORLD CHAMPION</td>
+                                <td>KING DIVISION</td>
                                 <td><a href="#">VACANT</a></td>
                                 <td>-</td>
                             </tr>
@@ -167,7 +167,7 @@
                         </thead>
                         <tbody>
                             <tr class="champion">
-                                <td>WORLD CHAMPION</td>
+                                <td>KING DIVISION</td>
                                 <td><a href="#">VACANT</a></td>
                                 <td>-</td>
                             </tr>
