--- a/ranking.html
+++ b/ranking.html
@@ -93,31 +93,36 @@
                             </tr>
                             <tr>
                                 <td>7</td>
-                                <td><a href="debaters.html">Pratama</a></td>
+                                <td><a href="debaters.html">Aryanwt</a></td>
                                 <td>0-1</td>
                             </tr>
                             <tr>
                                 <td>8</td>
-                                <td><a href="debaters.html">Kyuki</a></td>
+                                <td><a href="debaters.html">Pratama</a></td>
                                 <td>0-1</td>
                             </tr>
                             <tr>
                                 <td>9</td>
-                                <td><a href="debaters.html">Raju</a></td>
+                                <td><a href="debaters.html">Kyuki</a></td>
                                 <td>0-1</td>
                             </tr>
                             <tr>
                                 <td>10</td>
-                                <td><a href="debaters.html">Muchibei</a></td>
+                                <td><a href="debaters.html">Raju</a></td>
                                 <td>0-1</td>
                             </tr>
                             <tr>
                                 <td>11</td>
+                                <td><a href="debaters.html">Muchibei</a></td>
+                                <td>0-1</td>
+                            </tr>
+                            <tr>
+                                <td>12</td>
                                 <td><a href="debaters.html">Hyruki</a></td>
                                 <td>0-0</td>
                             </tr>
                             <tr>
-                                <td>12</td>
+                                <td>13</td>
                                 <td><a href="debaters.html">Kariz</a></td>
                                 <td>0-0</td>
                             </tr>
@@ -153,7 +158,17 @@
                             </tr>
                             <tr>
                                 <td>3</td>
+                                <td><a href="debaters.html">Yulzz</a></td>
+                                <td>1-0</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
                                 <td><a href="debaters.html">Renji</a></td>
+                                <td>0-1</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td><a href="debaters.html">Kazz</a></td>
                                 <td>0-1</td>
                             </tr>
                         </tbody>
@@ -178,21 +193,11 @@
                             </tr>
                             <tr>
                                 <td>1</td>
-                                <td><a href="debaters.html">Aryanwt</a></td>
-                                <td>1-0</td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td><a href="debaters.html">Shade</a></td>
-                                <td>1-1</td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
                                 <td><a href="debaters.html">Thinzel</a></td>
                                 <td>0-1</td>
                             </tr>
                             <tr>
-                                <td>4</td>
+                                <td>2</td>
                                 <td><a href="debaters.html">Rim</a></td>
                                 <td>0-1</td>
                             </tr>
