--- a/ranking.html
+++ b/ranking.html
@@ -47,162 +47,207 @@
             <div class="ranking-division-container">
                 <div class="division-card">
                     <h3 class="division-title">HIGH TIER DIVISION</h3>
-                    <table class="ranking-table">
-                        <thead>
-                            <tr>
-                                <th>Rank</th>
-                                <th>Debater</th>
-                                <th>Record (W-L)</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="champion">
-                                <td>KING DIVISION</td>
-                                <td><a href="debaters.html">Lianx</a></td>
-                                <td>1-0</td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td><a href="debaters.html">Aaron</a></td>
-                                <td>1-0</td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td><a href="debaters.html">Aheng</a></td>
-                                <td>1-0</td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td><a href="debaters.html">Adyy</a></td>
-                                <td>1-1</td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td><a href="debaters.html">Zogratis</a></td>
-                                <td>1-1</td>
-                            </tr>
-                            <tr>
-                                <td>5</td>
-                                <td><a href="debaters.html">Ryuu</a></td>
-                                <td>1-1</td>
-                            </tr>
-                            <tr>
-                                <td>6</td>
-                                <td><a href="debaters.html">Shade</a></td>
-                                <td>1-1</td>
-                            </tr>
-                            <tr>
-                                <td>7</td>
-                                <td><a href="debaters.html">Aryanwt</a></td>
-                                <td>0-1</td>
-                            </tr>
-                            <tr>
-                                <td>8</td>
-                                <td><a href="debaters.html">Pratama</a></td>
-                                <td>0-1</td>
-                            </tr>
-                            <tr>
-                                <td>9</td>
-                                <td><a href="debaters.html">Kyuki</a></td>
-                                <td>0-1</td>
-                            </tr>
-                            <tr>
-                                <td>10</td>
-                                <td><a href="debaters.html">Raju</a></td>
-                                <td>0-1</td>
-                            </tr>
-                            <tr>
-                                <td>11</td>
-                                <td><a href="debaters.html">Muchibei</a></td>
-                                <td>0-1</td>
-                            </tr>
-                            <tr>
-                                <td>12</td>
-                                <td><a href="debaters.html">Hyruki</a></td>
-                                <td>0-0</td>
-                            </tr>
-                            <tr>
-                                <td>13</td>
-                                <td><a href="debaters.html">Kariz</a></td>
-                                <td>0-0</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="ranking-list">
+                        <div class="ranking-item champion">
+                            <span class="rank-label">KING DIVISION</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_lianx.png" alt="Lianx" class="debater-avatar">
+                                <span class="debater-name">Lianx</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </div>
+
+                        <div class="ranking-item">
+                            <span class="rank-number">1</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_aaron.png" alt="Aaron" class="debater-avatar">
+                                <span class="debater-name">Aaron</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">2</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_aheng.png" alt="Aheng" class="debater-avatar">
+                                <span class="debater-name">Aheng</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">3</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_adyy.png" alt="Adyy" class="debater-avatar">
+                                <span class="debater-name">Adyy</span>
+                            </div>
+                            <span class="debater-record">1-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">4</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_zogratis.png" alt="Zogratis" class="debater-avatar">
+                                <span class="debater-name">Zogratis</span>
+                            </div>
+                            <span class="debater-record">1-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">5</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_ryuu.png" alt="Ryuu" class="debater-avatar">
+                                <span class="debater-name">Ryuu</span>
+                            </div>
+                            <span class="debater-record">1-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">6</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_shade.png" alt="Shade" class="debater-avatar">
+                                <span class="debater-name">Shade</span>
+                            </div>
+                            <span class="debater-record">1-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">7</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_aryanwt.png" alt="Aryanwt" class="debater-avatar">
+                                <span class="debater-name">Aryanwt</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">8</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_pratama.png" alt="Pratama" class="debater-avatar">
+                                <span class="debater-name">Pratama</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">9</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_kyuki.png" alt="Kyuki" class="debater-avatar">
+                                <span class="debater-name">Kyuki</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">10</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_raju.png" alt="Raju" class="debater-avatar">
+                                <span class="debater-name">Raju</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">11</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_muchibei.png" alt="Muchibei" class="debater-avatar">
+                                <span class="debater-name">Muchibei</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">12</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_hyruki.png" alt="Hyruki" class="debater-avatar">
+                                <span class="debater-name">Hyruki</span>
+                            </div>
+                            <span class="debater-record">0-0</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">13</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_kariz.png" alt="Kariz" class="debater-avatar">
+                                <span class="debater-name">Kariz</span>
+                            </div>
+                            <span class="debater-record">0-0</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="division-card">
                     <h3 class="division-title">MID TIER DIVISION</h3>
-                    <table class="ranking-table">
-                        <thead>
-                            <tr>
-                                <th>Rank</th>
-                                <th>Debater</th>
-                                <th>Record (W-L)</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="champion">
-                                <td>KING DIVISION</td>
-                                <td><a href="#">VACANT</a></td>
-                                <td>-</td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td><a href="debaters.html">Ranzt</a></td>
-                                <td>1-0</td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td><a href="debaters.html">Hiroo</a></td>
-                                <td>1-0</td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td><a href="debaters.html">Yulzz</a></td>
-                                <td>1-0</td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td><a href="debaters.html">Renji</a></td>
-                                <td>0-1</td>
-                            </tr>
-                            <tr>
-                                <td>5</td>
-                                <td><a href="debaters.html">Kazz</a></td>
-                                <td>0-1</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="ranking-list">
+                        <div class="ranking-item champion">
+                            <span class="rank-label">KING DIVISION</span>
+                            <div class="debater-info">
+                                <img src="assets/placeholder.png" alt="Vacant" class="debater-avatar">
+                                <span class="debater-name">VACANT</span>
+                            </div>
+                            <span class="debater-record">-</span>
+                        </div>
+
+                        <div class="ranking-item">
+                            <span class="rank-number">1</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_ranzt.png" alt="Ranzt" class="debater-avatar">
+                                <span class="debater-name">Ranzt</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">2</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_hiroo.png" alt="Hiroo" class="debater-avatar">
+                                <span class="debater-name">Hiroo</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">3</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_yulzz.png" alt="Yulzz" class="debater-avatar">
+                                <span class="debater-name">Yulzz</span>
+                            </div>
+                            <span class="debater-record">1-0</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">4</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_renji.png" alt="Renji" class="debater-avatar">
+                                <span class="debater-name">Renji</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">5</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_kazz.png" alt="Kazz" class="debater-avatar">
+                                <span class="debater-name">Kazz</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="division-card">
                     <h3 class="division-title">LOW TIER DIVISION</h3>
-                    <table class="ranking-table">
-                        <thead>
-                            <tr>
-                                <th>Rank</th>
-                                <th>Debater</th>
-                                <th>Record (W-L)</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="champion">
-                                <td>KING DIVISION</td>
-                                <td><a href="#">VACANT</a></td>
-                                <td>-</td>
-                            </tr>
-                            <tr>
-                                <td>1</td>
-                                <td><a href="debaters.html">Thinzel</a></td>
-                                <td>0-1</td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td><a href="debaters.html">Rim</a></td>
-                                <td>0-1</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="ranking-list">
+                        <div class="ranking-item champion">
+                            <span class="rank-label">KING DIVISION</span>
+                            <div class="debater-info">
+                                <img src="assets/placeholder.png" alt="Vacant" class="debater-avatar">
+                                <span class="debater-name">VACANT</span>
+                            </div>
+                            <span class="debater-record">-</span>
+                        </div>
+
+                        <div class="ranking-item">
+                            <span class="rank-number">1</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_thinzel.png" alt="Thinzel" class="debater-avatar">
+                                <span class="debater-name">Thinzel</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                        <div class="ranking-item">
+                            <span class="rank-number">2</span>
+                            <div class="debater-info">
+                                <img src="assets/debater_rim.png" alt="Rim" class="debater-avatar">
+                                <span class="debater-name">Rim</span>
+                            </div>
+                            <span class="debater-record">0-1</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -233,22 +278,5 @@
     </footer>
 
     <script src="js/script.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const navToggle = document.querySelector('.nav-toggle');
-            const mobileNav = document.querySelector('.mobile-nav-menu');
-            const closeNav = document.querySelector('.close-nav');
-    
-            if (navToggle && mobileNav && closeNav) {
-                navToggle.addEventListener('click', () => {
-                    mobileNav.classList.toggle('active');
-                });
-    
-                closeNav.addEventListener('click', () => {
-                    mobileNav.classList.remove('active');
-                });
-            }
-        });
-    </script>
 </body>
 </html>
