--- a/ranking.html
+++ b/ranking.html
@@ -49,7 +49,7 @@
                     <h3 class="division-title">HIGH TIER DIVISION</h3>
                     <div class="ranking-list">
                         <div class="ranking-item champion">
-                            <span class="rank-label">KING DIVISION</span>
+                            <span class="rank-label">K</span>
                             <div class="debater-info">
                                 <img src="assets/debater_lianx.png" alt="Lianx" class="debater-avatar">
                                 <span class="debater-name">Lianx</span>
@@ -168,7 +168,7 @@
                     <h3 class="division-title">MID TIER DIVISION</h3>
                     <div class="ranking-list">
                         <div class="ranking-item champion">
-                            <span class="rank-label">KING DIVISION</span>
+                            <span class="rank-label">K</span>
                             <div class="debater-info">
                                 <img src="assets/placeholder.png" alt="Vacant" class="debater-avatar">
                                 <span class="debater-name">VACANT</span>
@@ -223,7 +223,7 @@
                     <h3 class="division-title">LOW TIER DIVISION</h3>
                     <div class="ranking-list">
                         <div class="ranking-item champion">
-                            <span class="rank-label">KING DIVISION</span>
+                            <span class="rank-label">K</span>
                             <div class="debater-info">
                                 <img src="assets/placeholder.png" alt="Vacant" class="debater-avatar">
                                 <span class="debater-name">VACANT</span>
